Add dependency so flags are correct.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,14 @@ include("${CMAKE_CURRENT_LIST_DIR}/httpFilePaths.cmake")
 add_library(free-rtos-core-http STATIC ${HTTP_SOURCES})
 
 target_include_directories(free-rtos-core-http PUBLIC ${HTTP_INCLUDE_PUBLIC_DIRS})
+target_link_libraries(free-rtos-core-http PRIVATE arduino-core)
 
-target_compile_options(free-rtos-core-http PRIVATE
+target_compile_options(free-rtos-core-http PUBLIC
   -DHTTP_DO_NOT_USE_CUSTOM_CONFIG
   -DHTTP_USER_AGENT_VALUE="smart-vac-gauge"
+)
+target_compile_options(free-rtos-core-http PRIVATE
+  -DHTTP_DO_NOT_USE_CUSTOM_CONFIG
   -Os
   -Wall
   -Wextra
